--- a/css/main.css
+++ b/css/main.css
@@ -182,186 +182,61 @@ footer span {
 	font-size: 14px;
 }
 
-/* ----------- For screens 768px and larger ----------- */
+/* ----------- For tablet screens 768px and larger ----------- */
 @media (min-width: 768px) {
-	.section-one,
-	.section-two,
-	.section-three{
-		width: 33%;
-		height: 300px;
-	}
-
-	.section-one h3 {
-		padding: 10px 0;
-	}
-
-	.section-two {
-		border-left: 1px solid #eee;
-		border-right: 1px solid #eee;
-	}
-
-	.section-two h3,
-	.section-three h3 {
-		padding: 10px 20px;
-	}
-
-	.menu {
-		padding-right: 20px;
-	}
-
-	.reviews {
-		padding: 0 20px;
-	}
-
-	.address {
-		padding: 0 20px;
-	}
-}
-
-/* ----------- For screens 1200px wide and larger----------- */
-@media (min-width: 1200px) {
-	.container{
-		max-width: 1200px;
-		margin: 0 auto;
-	}
-
-	header {
-		height: auto;
-		border-bottom: 3px solid #77a466;
-		margin: 0 auto;
-		display: block;
-		justify-content: space-between;
-		align-items: flex-end;
-		flex-flow: nowrap;
-	}
-
-	header h1 {
-		float: left;
-		margin: 0;
-		padding: 38px 0;
-	}
-
-	header h1 span {
-		color: #77a466;
-	}
-
-	nav {
-		border-top: none;
-	}
-
-	header nav {
-		float: right;
-		padding: 46px 0;
-		width: 60%;
-		text-align: right;
-		line-height: 1em;
-	}
-
-	header nav ul {
-		margin: 0;
-		padding: 0;
-	}
-
-	header nav ul li {
-		text-transform: uppercase;
-		font-weight: 700;
-		font-size: 14px;
-		padding: 0 10px;
-		display: inline;
-	}
-
-	header nav ul li a {
-		text-decoration: none;
-		color:#77a466;
-	}
-
-	.top-section,
 	.bottom-section {
-		margin: 0 auto;
-		clear: both;
-	}
-
-	.main-image {
-		height: auto;
-		float: left;
-	}
-
-	.main-image img {
-		width: 100%;
-		border-bottom: 3px solid #77a466;
-	}
-
-	.main-title {
-		height: auto;
-		float: left;
-	}
-
-	.main-title h2 {
-		text-align: left;
-		padding: 5px 0;
-		color: #77a466;
-	}
-
-	.main-title p {
-		padding: 0;
-		font-size: 16px;
-		line-height: 25px;
+		align-items: baseline;
 	}
 
 	.section-one,
 	.section-two,
 	.section-three {
 		width: 33%;
-		height: 220px;
-		float: left;
-		border-top: 1px solid #eee;
-	}
-
-	.section-one h3 {
-		padding: 10px 0;
 	}
 
 	.section-two {
 		border-left: 1px solid #eee;
 		border-right: 1px solid #eee;
+
 	}
 
-	.section-two h3,
+	.section-two h3	{
+		padding-left: 20px;
+	}
+
 	.section-three h3 {
-		padding: 10px 20px;
-	}
-
-	.menu {
-		list-style: none;
-		padding: 0;
-	}
-	.menu li {
-		padding: 10px 0;
-		color:#77a466;
+		padding-left: 20px;
 	}
 
 	.reviews {
-		color: #333;
-		font-size: 16px;
-		line-height: 21px;
+		padding: 0 20px;
 	}
 
-	.address {
-		font-size: 16px;
-		line-height: 24px;
+ 	.address {
+		padding-left: 20px;
+	}
+}
+
+/* ----------- For desktop screens 1200px wide and larger----------- */
+@media (min-width: 1200px) {
+	header {
+		justify-content: space-between;
 	}
 
-	footer {
-		height: 50px;
-		border-top: 3px solid #eee;
-		margin: 0 auto;
-		clear: both;
-		text-align: center;
+	header h1 {
+		width: 30%;
+		padding: 0;
+		text-align: left;
 	}
-	footer span {
-		font-family: 'Galada', cursive;
-		text-transform: lowercase;
-		color: #77a466;
-		font-size: 14px;
+
+	header nav {
+		width: 40%;
+		border-top: none;
+		padding-right: 20px; 
+	}
+
+	header nav ul {
+		display: flex;
+		justify-content: space-between;
 	}
 }
